# specbolt

./: .clang-format  .gitignore  .pre-commit-config.yaml  .tm_properties  Alu.cpp  Alu.hpp  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Disassembler.cpp  Disassembler.hpp  EXAMPLE_PATTERNS.md  Flags.cpp  Flags.hpp  GLOSSARY.md  INTEGRATION.md  Instruction.cpp  Instruction.hpp  Memory.cpp  Memory.hpp  Notes.md  Opcodes.cpp  Opcodes.hpp  README.md  RegisterFile.cpp  STYLE_GUIDE.md  Z80.cpp  Z80.hpp  main.cpp
.github/workflows/: ci.yml
cmake/: CPM.cmake  FindNpm.cmake  FindReadline.cmake  catch2.cmake  colors.cmake  dependency.cmake  pedantic-and-modern.cmake  pedantic.cmake
cmake/cxx-include/: module.hpp
console/: CMakeLists.txt  main.cpp
peripherals/: All.cppm  Audio.cpp  Audio.cppm  Audio.hpp  Blip_Buffer.cppm  CMakeLists.txt  Keyboard.cpp  Keyboard.cppm  Keyboard.hpp  Memory.cpp  Memory.cppm  Memory.hpp  Tape.cpp  Tape.cppm  Video.cpp  Video.cppm  Video.hpp  module.cppm
peripherals/blip_buffer/: Blip_Buffer.cpp  README.md
peripherals/include/peripherals/: Audio.hpp  Blip_Buffer.hpp  Keyboard.hpp  Memory.hpp  Tape.hpp  Video.hpp
peripherals/test/: CMakeLists.txt  MemoryTest.cpp
sdl/: CMakeLists.txt  main.cpp  sdl_wrapper.cpp  sdl_wrapper.cppm  sdl_wrapper.hpp
sdl/heatmap/: README.md  heatmap_memory_listener.hpp  heatmap_renderer.cpp  heatmap_renderer.hpp  memory_heatmap.cpp  memory_heatmap.hpp  memory_hooks.cpp  memory_hooks.hpp
spectrum/: Assets.cpp  Assets.cppm  CMakeLists.txt  Snapshot.cpp  Snapshot.cppm  Snapshot.hpp  Spectrum.cpp  Spectrum.cppm  Spectrum.hpp  module.cppm
spectrum/include/spectrum/: Assets.hpp  Snapshot.hpp  Spectrum.hpp
test/: AluTest.cpp  CMakeLists.txt  DisassemblerTest.cpp  FlagsTest.cpp  RegisterFileTest.cpp
web/: .gitignore  CMakeLists.txt  audio-handler.js  audio-handler.ts  audio-renderer.js  embed.html  fifo-audio.js  ia-search.ts  index.html  main.cpp  main.js  main.ts  package-lock.json  package.json  spectrum.js  spectrum.ts  tsconfig.json  typist.ts  ui.ts  vite-dev.sh  vite.config.js  vite.config.mjs  wasi.js
web/public/: web.wasm
web/public/roms/: 48.rom
z80/: All.cppm  Alu.cpp  Alu.cppm  Alu.hpp  CMakeLists.txt  CPU.cppm  Decoder.cpp  Decoder.cppm  Decoder.hpp  Disassembler.cpp  Disassembler.cppm  Disassembler.hpp  Flags.cpp  Flags.cppm  Flags.hpp  Generated.cpp  Generated.cppm  Generated.hpp  Instruction.cpp  Instruction.cppm  Instruction.hpp  InstructionImpl.cppm  Opcodes.cpp  RegisterFile.cpp  RegisterFile.cppm  RegisterFile.hpp  Z80.cpp  Z80.cppm  Z80.hpp  module.cppm
z80/common/: Alu.cpp  Alu.cppm  CMakeLists.txt  Flags.cpp  Flags.cppm  RegisterFile.cpp  RegisterFile.cppm  Scheduler.cppm  Z80Base.cpp  Z80Base.cppm  Z80Base.hpp  module.cppm
z80/common/include/z80/common/: Alu.hpp  Flags.hpp  RegisterFile.hpp  Scheduler.hpp  Z80Base.hpp
z80/common/test/: AluTest.cpp  CMakeLists.txt  FlagsTest.cpp  RegisterFileTest.cpp  SchedulerTest.cpp
z80/new/: Mnemonic.cppm  Mnemonic.hpp  Z80Support.cppm  Z80Support.hpp
z80/test/: AluTest.cpp  CMakeLists.txt  DisassemblerTest.cpp  FlagsTest.cpp  GeneratedTest.cpp  OpcodeTests.cpp  README.zexdoc.com.md  RegisterFileTest.cpp  ZexDocTest.cpp  support.hpp
z80/v1/: CMakeLists.txt  Decoder.cpp  Decoder.cppm  Decoder.hpp  Disassembler.cpp  Disassembler.cppm  Instruction.cpp  Instruction.cppm  Instruction.hpp  InstructionImpl.cppm  Z80.cpp  Z80.cppm  Z80.hpp  module.cppm
z80/v1/include/z80/v1/: Disassembler.hpp  Instruction.hpp  Z80.hpp
z80/v1/test/: CMakeLists.txt  DisassemblerTest.cpp  OpcodeTests.cpp
z80/v2/: CMakeLists.txt  Disassembler.cpp  Disassembler.cppm  Generated.cpp  Generated.hpp  Mnemonic.cppm  Mnemonic.hpp  Z80.cpp  Z80.cppm  Z80.hpp  Z80Impl.cpp  Z80Impl.cppm  Z80Impl.hpp  Z80Support.hpp  module.cppm
z80/v2/include/z80/v2/: Disassembler.hpp  Z80.hpp
z80/v2/test/: CMakeLists.txt  DisassemblerTest.cpp  GeneratedTest.cpp  IndirectTest.cpp
z80/v3/: CMakeLists.txt  DisassembleInternal.hpp  Disassembler.cpp  Disassembler.cppm  MakeZ80.cpp  Z80.cpp  Z80.cppm  module.cppm
z80/v3/include/z80/v3/: Disassembler.hpp  Z80.hpp
z80/v3/test/: CMakeLists.txt  DisassemblerTest.cpp
z80/v4/: .clang-format  CMakeLists.txt  Z80.cpp
z80/v4/bench/: Bench.cpp  CMakeLists.txt
z80/v4/include/z80/v4/: Instructions.hpp  Shapes.hpp  Z80.hpp
z80/v4/test/: CMakeLists.txt  Z80Test.cpp
